--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Data
+data/*
+articles/*
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -7,7 +10,6 @@ __pycache__/
 *.so
 
 # Distribution / packaging
-data/
 .Python
 build/
 develop-eggs/
